--- a/sections/testimonial-banner.liquid
+++ b/sections/testimonial-banner.liquid
@@ -89,7 +89,7 @@
     font-weight: bold;
     font-size: 16px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    display: inline-block; /* Garante que o padding funcione corretamente */
+    display: inline-block;
   }
 
   a.testimonial-banner__button:hover {
@@ -120,13 +120,12 @@
     max-width: 300px;
     z-index: 3;
     padding-bottom: 250px;
-    justify-content: center;
   }
 
   .review-card__header {
     display: flex;
-    align-items: center;
     margin-bottom: 15px;
+    padding-left: 80px;
   }
 
   .review-card__avatar {
@@ -134,7 +133,7 @@
     height: 40px;
     border-radius: 50%;
     object-fit: cover;
-    margin-right: 15px;
+    margin-right: 10px;
   }
 
   .review-card__author-info {
