--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -24,5 +24,6 @@
     {{ content_for_layout }}
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer> </script>
+    {% section 'footer' %}
   </body>
 </html>
